Se agrega un pequeño footer

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                 </div>
                 <!--aqui se creara el boton-->
                 <p>
-                    <div>
-                        <button type="submit" class="btn btn-light" id="btnAdd" onclick="addData()">Agregar Datos</button>
+                    <div class="conta">
+                        <button type="submit" class="btn btn-light" id="btnAdd" click="addData()">Agregar Datos</button>
                     </div>
                     <!-- Se hace una separacion de los datos que se van agregando -->
                     <hr>
@@ -47,12 +47,19 @@
                         <tr>
                             <th>Nombre</th>
                             <th>Apellido</th>
+                            <th>Accion</th>
                         </tr>
-
                     </thead>
+                    <tbody>
+
+                    </tbody>
                 </table>
-            </div>
+            </div>   
         </div>
+        <footer>
+            
+            PROYECTO NUMEROº 2 DEL BOOTCAMP DE LA UDD AÑO 2023
+        </footer>
     </main>
     <script scr="./app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
