--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CRUD UDD</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
 </head>
 
@@ -17,7 +17,7 @@
                 <a class="navbar-brand">CRUD-UDD</a>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Buscar</button>
+                    <button class="btn btn btn-light" type="submit">Buscar</button>
                 </form>
             </div>
         </nav>
@@ -25,7 +25,6 @@
     <div class="text-center p-2">
         <h1 class="">JavaScript CRUD</h1>
     </div>
-    <br>
     <div class="container">
         <div class="container mb-5">
             <div class="class"="row">
@@ -47,19 +46,19 @@
                 </div>
             </div>
             <hr>
-            <table class="table table-bordered" id="tableData">
-                <thead>
-                    <tr>
-                        <th scope="col">Correo</th>
-                        <th scope="col">Nombre</th>
-                        <th scope="col">Numero</th>
-                        <th scope="col">Acciones</th>
-                    </tr>
-                </thead>
-                <tbody>
+                <table class="table table-bordered" id="tableData">
+                    <thead>
+                        <tr>
+                            <th scope="col">Correo</th>
+                            <th scope="col">Nombre</th>
+                            <th scope="col">Numero</th>
+                            <th scope="col">Acciones</th>
+                        </tr>
+                    </thead>
+                    <tbody>
 
-                </tbody>
-            </table>
+                    </tbody>
+                </table>
         </div>
     </div>
     <footer>
@@ -67,8 +66,8 @@
         <h3>PROYECTO NUMEROº 2 DEL BOOTCAMP DE LA UDD AÑO 2023</h3>
     </footer>
     <!-- bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
     <script src="./app.js"></script>
 </body>
