--- a/index.html
+++ b/index.html
@@ -4,72 +4,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <title>Proyecto CRUD</title>
+    <title>CRUD JavaScript con LocalStorage</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-    <header>
-        <nav class="navbar bg-body-tertiary">
-            <div class="container-fluid">
-                <a class="navbar-brand">CRUD-UDD</a>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Buscar</button>
-                </form>
-            </div>
-        </nav>
-    </header>
-
-    <main>
-        <div class="container">
-            <div class="container mb-5">
-                <div class="row">
-                    <form >
-                        <div class="mb-3">
-                            <label class="form-label">Correo electronico</label>
-                            <input type="email" class="form-control" id="inputEmail" placeholder="Correo electronico">
-                        </div>
-                        <div class="mb-3">
-                            <label class="form-label">Nombre Completo</label>
-                            <input type="text" class="form-control" id="inputNombre" placeholder="Nombre Completo">
-                        </div>
-                        <div class="mb-3">
-                            <label class="form-label">Telefono</label>
-                            <input type="number" class="form-control" id="inputNumero" placeholder="Telefono">
-                        </div>
-                        <button type="submit" class="btn btn-primary" id="btnAdd" onclick="addData()">Agregar
-                            Datos</button>
-                        <button type="submit" class="btn btn-primary" id="btnUpdate">Actualizar</button>
-                    </form>
+    <div class="text-center p-2">
+        <h1 class="">JavaScript CRUD</h1>
+    </div>
+    <br>
+    <div class="container">
+        <div class="container mb-5">
+            <div class="class"="row">
+                <div class="mb-3">
+                    <label class="form-label">Correo</label>
+                    <input type="email" class="form-control" id="inputEmail" placeholder="Correo Electrónico">
                 </div>
-                <hr>
-                <table class="table table_bordered" id="tableData">
-                    <thead>
-                        <tr>
-                            <th>Email</th>
-                            <th>Nombre</th>
-                            <th>Numero</th>
-                            <th>ACCIONES</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-
-                    </tbody>
-                </table>
+                <div class="mb-3">
+                    <label class="form-label">Nombre Completo</label>
+                    <input type="text" class="form-control" id="inputName" placeholder="Nombre Completo">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label">Número de Teléfono</label>
+                    <input type="number" class="form-control" id="inputPhone" placeholder="Número Telefónico">
+                </div>
+                <div class="container">
+                    <button type="submit" class="btn btn-primary" id="btnAdd" onclick="addData()">Enviar Datos</button>
+                    <button type="submit" class="btn btn-warning" id="btnUpdate">Actualizar Datos</button>
+                </div>
             </div>
-        </div>
-        <footer>
+            <hr>
+            <table class="table table-bordered" id="tableData">
+                <thead>
+                    <tr>
+                        <th scope="col">Correo</th>
+                        <th scope="col">Nombre Completo</th>
+                        <th scope="col">Némero de Teléfono</th>
+                        <th scope="col">Acciones</th>
+                    </tr>
+                </thead>
+                <tbody>
 
-            <h3>PROYECTO NUMEROº 2 DEL BOOTCAMP DE LA UDD AÑO 2023</h3>
-        </footer>
-    </main>
-    <script scr="./app.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+    <!-- bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+    <script src="./app.js"></script>
 </body>
 
 </html>
