--- a/index.html
+++ b/index.html
@@ -4,13 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CRUD JavaScript con LocalStorage</title>
+    <title>CRUD UDD</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
+    <header>
+        <nav class="navbar bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand">CRUD-UDD</a>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Buscar</button>
+                </form>
+            </div>
+        </nav>
+    </header>
     <div class="text-center p-2">
         <h1 class="">JavaScript CRUD</h1>
     </div>
@@ -40,8 +51,8 @@
                 <thead>
                     <tr>
                         <th scope="col">Correo</th>
-                        <th scope="col">Nombre Completo</th>
-                        <th scope="col">Némero de Teléfono</th>
+                        <th scope="col">Nombre</th>
+                        <th scope="col">Numero</th>
                         <th scope="col">Acciones</th>
                     </tr>
                 </thead>
@@ -51,7 +62,10 @@
             </table>
         </div>
     </div>
+    <footer>
 
+        <h3>PROYECTO NUMEROº 2 DEL BOOTCAMP DE LA UDD AÑO 2023</h3>
+    </footer>
     <!-- bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
